typescript/checker/tests/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInRegularExpressions08_ES5.ts.stderr
error: unimplemented
expand_export_info(RegExp)
File: $DIR/tests/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInRegularExpressions08_ES5.ts
 --> $DIR/tests/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInRegularExpressions08_ES5.ts:6:9
  |
6 | var x = /\u{FFFF}/g;
  |         ^^^^^^^^^^^

